fix: Color contrast.

--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -7,7 +7,7 @@ $epsilon: #EBEBEB;
 $zeta: rgba(0, 0, 0, 0.12);
 $eta: #a2a9b1;
 $teta: #111b27;
-$iota: rgba(55, 53, 47, 0.6);
+$iota: #595959;
 
 
 // Descriptive naming
